--- a/fastreactpizza/index.html
+++ b/fastreactpizza/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <title>Pizza Place</title>
+    <title>Fast React Pizza Co.</title>
   </head>
   <body class="bg-[#f5f5f4]">
     <div id="root"></div>
